--- a/src/static/index.html
+++ b/src/static/index.html
@@ -9,6 +9,11 @@ body{background:#1a1a1a;color:#fff;perspective:1000px;position:relative;overflow
 .card{background:#2a2a2a;border-color:#444}
 h3,h5{color:#fff}
 label{color:#fff}
+.btn-trash{background:none!important;border:none!important;padding:0!important;font-size:1.2rem;cursor:pointer}
+.editable-cell{position:relative;cursor:pointer}
+.editable-cell:hover .edit-icon{opacity:1}
+.edit-icon{opacity:0;margin-left:5px;font-size:0.8rem;transition:opacity .2s}
+.edit-input{background:#1a1a1a;color:#fff;border:1px solid #0088ff;padding:2px 5px;width:100%}
 .bubbles{position:fixed;top:0;left:0;width:100%;height:100%;pointer-events:none;z-index:0;overflow:hidden}
 .bubble{position:absolute;background:rgba(0,120,220,.2);border-radius:50%;animation:rise 15s infinite ease-in}
 .bubble:nth-child(1){left:10%;width:40px;height:40px;bottom:0%;animation-delay:0s}
@@ -21,6 +26,7 @@ label{color:#fff}
 @keyframes rise{0%{transform:translateY(0);opacity:1}100%{transform:translateY(-100vh);opacity:0}}
 .container{position:relative;z-index:1}
 .cube-wrap{perspective:800px;margin:20px auto;width:120px;height:120px;filter:drop-shadow(0 20px 30px rgba(0,0,0,.7));position:relative;z-index:1}
+.cube-wrap:hover{animation:gelatine .5s 1}
 .cube{width:120px;height:120px;position:relative;transform-style:preserve-3d;animation:spin 8s linear infinite}
 .cube div{position:absolute;width:120px;height:120px;border:1px solid #0088ff;background:rgba(0,120,220,.5);display:flex;align-items:center;justify-content:center;font-weight:bold;color:#fff;font-size:40px}
 .cube .front,.cube .right{background:rgba(0,140,240,.6);box-shadow:inset 3px 3px 15px rgba(255,255,255,.3)}
@@ -34,6 +40,7 @@ label{color:#fff}
 .cube .top{transform:rotateX(90deg) translateZ(60px)}
 .cube .bottom{transform:rotateX(-90deg) translateZ(60px)}
 @keyframes spin{to{transform:rotateX(360deg) rotateY(360deg)}}
+@keyframes gelatine{from,to{transform:scale(1,1)}50%{transform:scale(.7,1.3)}100%{transform:scale(1.3,.7)}150%{transform:scale(.85,1.15)}}
 </style>
 </head>
 <body>
@@ -108,21 +115,80 @@ label{color:#fff}
 </div>
 <script>
 $=i=>document.getElementById(i);
-function toTable(d){
+let lastEndpoint='';
+function toTable(d,endpoint){
   if(!d||typeof d!=='object')return'<pre class="border p-3 mt-3">'+JSON.stringify(d,null,2)+'</pre>';
   const arr=Array.isArray(d)?d:[d];
   if(!arr.length)return'<pre class="border p-3 mt-3">No results</pre>';
   const keys=Object.keys(arr[0]);
   let t='<table class="table table-dark table-striped table-bordered mt-3"><thead><tr>';
   keys.forEach(k=>t+=`<th>${k}</th>`);
-  t+='</tr></thead><tbody>';
-  arr.forEach(row=>{
+  t+='<th>Actions</th></tr></thead><tbody>';
+  arr.forEach((row,idx)=>{
     t+='<tr>';
-    keys.forEach(k=>t+=`<td>${row[k]}</td>`);
+    keys.forEach(k=>{
+      const val=row[k];
+      const isKey=k==='id'||k==='code'||(k==='provider_id'||k==='country_code');
+      const displayVal=val===null?`<span style="color:#888">null</span>`:val;
+      if(isKey){
+        t+=`<td>${displayVal}</td>`;
+      }else{
+        t+=`<td class="editable-cell" onclick="edit(this,'${endpoint}',${JSON.stringify(row).replace(/"/g,'&quot;')},'${k}')"><span class="cell-val">${displayVal}</span><span class="edit-icon">✏️</span></td>`;
+      }
+    });
+    const id=row.id||row.code||(row.provider_id&&row.country_code?row.provider_id+'/'+row.country_code:'');
+    t+=`<td><button class="btn-trash" onclick="del('${endpoint}${id}','${endpoint}')">🗑️</button></td>`;
     t+='</tr>';
   });
   t+='</tbody></table>';
   return t;
+}
+function edit(cell,endpoint,row,field){
+  const span=cell.querySelector('.cell-val');
+  const val=span.textContent;
+  let input;
+  if(field==='continent'){
+    input=document.createElement('select');
+    input.className='edit-input';
+    input.innerHTML='<option value="">Select</option><option>Asia</option><option>Europe</option><option>North America</option><option>South America</option><option>Africa</option><option>Oceania</option>';
+    input.value=val;
+  }else{
+    input=document.createElement('input');
+    input.className='edit-input';
+    input.value=val;
+  }
+  cell.replaceChild(input,span);
+  input.focus();
+  input.onblur=async()=>{
+    const newVal=input.value;
+    if(newVal!==val){
+      const id=row.id||row.code||(row.provider_id&&row.country_code?row.provider_id+'/'+row.country_code:'');
+      const body={[field]:field==='lat'||field==='lng'?+newVal:newVal};
+      try{
+        const h={'Content-Type':'application/json'};
+        const t=$('token').value;
+        if(t)h['token']=t;
+        await fetch('/internal'+endpoint+id,{method:'PATCH',headers:h,body:JSON.stringify(body)});
+        a(endpoint,'GET');
+      }catch(e){
+        alert('Update failed: '+e.message);
+      }
+    }else{
+      a(endpoint,'GET');
+    }
+  };
+  input.onkeydown=e=>{if(e.key==='Enter')input.blur()};
+}
+async function del(path,endpoint){
+  try{
+    const h={'Content-Type':'application/json'};
+    const t=$('token').value;
+    if(t)h['token']=t;
+    await fetch('/internal'+path,{method:'DELETE',headers:h});
+    a(endpoint,'GET');
+  }catch(e){
+    $('o').innerHTML='<pre class="border p-3 mt-3">'+e.message+'</pre>';
+  }
 }
 async function a(e,m='GET',b,type){
   try{
@@ -132,7 +198,8 @@ async function a(e,m='GET',b,type){
     const r=await fetch('/internal'+e,{method:m,headers:h,body:b?JSON.stringify(b):null});
     const data=await r.json();
     if(m==='GET'&&Array.isArray(data)){
-      $('o').innerHTML=toTable(data);
+      lastEndpoint=e;
+      $('o').innerHTML=toTable(data,e);
     }else{
       $('o').innerHTML='<pre class="border p-3 mt-3">'+JSON.stringify(data,null,2)+'</pre>';
     }
