--- a/src/static/index.html
+++ b/src/static/index.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Database Manager</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/index.css">
+  <script src="js/index.js" defer></script>
 </head>
 <body>
   <div class="bubbles" aria-hidden="true">
@@ -103,7 +104,5 @@
       </div>
     </section>
   </main>
-
-  <script src="app.js"></script>
 </body>
 </html>
